# raft_rag

./: .gitignore  answer_data_generation.ipynb  cite_data.ipynb  negative_sample.ipynb  no_answer.ipynb  noun_phrase.ipynb  pyproject.toml
