[project]
name = "raft-rag"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding (>=1.3.4,<2.0.0)",
    "peft (>=0.15.2,<0.16.0)",
    "wget (>=3.2,<4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

